# yqwork-rust-2025

./: .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: CODEOWNERS  pr-check.yaml  release.yml
config/: config_template.toml
src/: config.rs  main.rs  result.rs
src/infra/: mod.rs
src/infra/mysql/: announcement.rs  department.rs  feedback.rs  jifen.rs  mail.rs  mini_config.rs  mod.rs  notice.rs  permission.rs  recruitment.rs  role.rs  user.rs  work_hour.rs  zhihu.rs
src/infra/weihuda/: auth.rs  mod.rs
src/middleware/: cors.rs  default.rs  mod.rs  timeout.rs
src/router/: mod.rs
src/router/qnxg/: auth.rs  department.rs  mod.rs  permission.rs  role.rs  statistics.rs  user.rs  work_hour.rs
src/router/weihuda/: announcement.rs  config.rs  feedback.rs  jifen.rs  mod.rs  notice.rs  zhihu.rs
src/service/: mod.rs
src/service/qnxg/: auth.rs  department.rs  mod.rs  permission.rs  role.rs  statistics.rs  user.rs  work_hour.rs
src/service/weihuda/: announcement.rs  config.rs  feedback.rs  jifen.rs  mod.rs  notice.rs  zhihu.rs
src/utils/: auth.rs  mod.rs
